--- a/php.ini
+++ b/php.ini
@@ -581,7 +581,7 @@ html_errors = On
 ; empty.
 ; http://php.net/error-log
 ; Example:
-error_log = /tmp/php/showtime/error.log
+error_log = php_showtime_error.log
 ; Log errors to syslog (Event Log on Windows).
 ;error_log = syslog
 
