--- a/www.conf
+++ b/www.conf
@@ -1,3 +1,4 @@
+; just a test
 ; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
 ; pool name ('www' here)
